# dcs_ml_ai

./: .gitignore  README.md  dev_log_20250731.md  pyproject.toml  test_direct_rendering.avi  test_dynamic_video.py  test_flight_env.py  test_force_recreate.avi  train_2d_env.py  train_with_video_recording.py
analysis_results/: run_analysis.csv
dcs_ml_ai/: train.py
dcs_ml_ai/callbacks/: metrics.py  model_saving.py
dcs_ml_ai/envs/: telemetry_logger.py  two_d_flight_env.py  wrappers.py
dcs_ml_ai/utils/: __init__.py  utils.py
docs/: env_notes.md  hyperparams.md  tacview_export.md  training_log.md  visualization.md
scripts/: analyze_logs.py  save_last_logs.py  save_last_session.py  train.py
tensorboard_logs/PPO_1/: events.out.tfevents.1748978911.BLD.24748.0
tensorboard_logs/PPO_12/: events.out.tfevents.1749590746.BLD.11496.0
tensorboard_logs/PPO_16/: events.out.tfevents.1749596616.BLD.18352.0
tensorboard_logs/PPO_17/: events.out.tfevents.1749596858.BLD.27784.0
tensorboard_logs/PPO_2/: events.out.tfevents.1748984028.BLD.23356.0
tensorboard_logs/PPO_20/: events.out.tfevents.1749597513.BLD.26684.0
tensorboard_logs/PPO_22/: events.out.tfevents.1749600020.BLD.17488.0
tensorboard_logs/PPO_27/: events.out.tfevents.1749601001.BLD.24772.0
tensorboard_logs/PPO_32/: events.out.tfevents.1749601616.BLD.9012.0
tensorboard_logs/PPO_33/: events.out.tfevents.1749601746.BLD.24076.0
tensorboard_logs/PPO_34/: events.out.tfevents.1749602047.BLD.22656.0
tensorboard_logs/PPO_36/: events.out.tfevents.1749602547.BLD.9368.0
(+554 files in other folders)
