[tool.poetry]
name = "dcs-ml-ai"
version = "0.1.0"
description = "Machine learning-based pilot AI for DCS"
authors = ["James Lentzsch <jrlentzsch@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
stable-baselines3 = {extras = ["extra"], version = "^2.2.1"}
torch = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

